--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,22 @@ body {
   height: 100vh;
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./images/login.png") -1500px center/cover;
+    url("./Images/login.png") -1500px center/cover;
   backdrop-filter: blur(8px);
+}
+
+/* @media (min-width: 381px) and (max-width: 500px) {
+  body {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("./Images/login.png") -1500 center;
+  }
+} */
+
+@media (min-width: 501px) {
+  body {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("./Images/login.png") center center/cover;
+  }
 }
 
 /* Styling for the HTML */
