--- a/Home/home.css
+++ b/Home/home.css
@@ -13,9 +13,9 @@ body {
   width: 100%;
 }
 
-.dark-mode{
+.dark-mode {
   background-color: #e6e6e6;
-  color: #fff;
+  color: #000;
 }
 
 .wrapper {
@@ -118,7 +118,7 @@ body {
   gap: 20px;
   padding: 20px;
 }
-    
+
 .hostel_card {
   display: block;
   background-color: #2a2a2a;
@@ -132,7 +132,7 @@ body {
 }
 
 .dark-mode .hostel_card {
-  background-color: #F9FAFB;
+  background-color: #f9fafb;
   color: #000000;
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
 }
@@ -162,17 +162,17 @@ body {
 }
 
 .dark-mode .hostel_card .top .prize {
-  background-color: #F9FAFB;
+  background-color: #f9fafb;
   color: #000000;
 }
 
 .hostel_card .bottom {
   padding: 10px 20px 20px 20px;
-  background-color: #2C2F33;
+  background-color: #2c2f33;
 }
 
 .dark-mode .hostel_card .bottom {
-  background-color: #F9FAFB;
+  background-color: #f9fafb;
   color: #000000;
 }
 
@@ -236,12 +236,11 @@ body {
   display: flex;
 }
 
-.more_details{
+.more_details {
   text-decoration: none;
   color: blue;
 }
 
-.more_details p:hover{
+.more_details p:hover {
   color: rgb(0, 0, 255);
 }
-
