--- a/Details/details.css
+++ b/Details/details.css
@@ -118,117 +118,6 @@ body {
   padding: 20px;
 }
 
-.hostel_card {
-  display: block;
-  background-color: #2a2a2a;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
-  width: 100%;
-  max-width: 300px;
-  color: white;
-  font-family: Arial, sans-serif;
-  transition: transform 0.2s;
-}
-
-.dark-mode .hostel_card {
-  background-color: #f9fafb;
-  color: #000000;
-  box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
-}
-
-.hostel_card .top {
-  position: relative;
-  width: 100%;
-  height: 200px;
-  background-image: url("../Images/placeholder.png");
-  background-size: cover;
-  background-position: center;
-}
-
-.hostel_card .top .prize {
-  position: absolute;
-  bottom: 10px;
-  right: 0px;
-  background-color: #2a2a2a;
-  padding: 8px 10px;
-  border-radius: 10px 0 0 10px;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.dark-mode .hostel_card .top .prize {
-  background-color: #f9fafb;
-  color: #000000;
-}
-
-.hostel_card .bottom {
-  padding: 10px 20px 20px 20px;
-  background-color: #2c2f33;
-}
-
-.dark-mode .hostel_card .bottom {
-  background-color: #f9fafb;
-  color: #000000;
-}
-
-.hostel_card .bottom .info {
-  margin-bottom: 40px;
-}
-
-.hostel_card .bottom .info h2 {
-  font-size: 22px;
-  margin: 0;
-  margin-bottom: -2px;
-}
-
-.hostel_card .bottom .info p {
-  margin: 0;
-  font-size: 14px;
-}
-
-.hostel_card .sub {
-  color: #aaaaaa;
-}
-
-.hostel_card .top .sub {
-  font-size: 14px;
-  font-weight: lighter;
-}
-
-.dark-mode .hostel_card .bottom .info p {
-  color: #555555;
-}
-
-.hostel_card .bottom .more_info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.hostel_card .bottom .more_info .gender {
-  background-color: #444444;
-  padding: 5px 10px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-
-.dark-mode .hostel_card .bottom .more_info .gender {
-  background-color: #cdcdcd;
-  color: #000000;
-}
-
-.hostel_card .bottom .more_info .more p {
-  margin: 0;
-  font-size: 14px;
-  color: #1e90ff;
-  cursor: pointer;
-}
-
-.dark-mode .hostel_card .bottom .more_info .more p {
-  color: #1e90ff;
-}
-
 .dropdown.show {
   display: flex;
 }
@@ -246,14 +135,14 @@ body {
   padding: 20px;
   max-width: 800px;
   margin: auto;
-  /* background-color: #2a2a2a; */
+  background-color: #202020;
   color: white;
-  border-radius: 10px;
+  border-radius: 40px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
 .dark-mode .hostel_details {
-  /* background-color: #f9fafb; */
+  background-color: #f9fafb;
   color: #000000;
 }
 
@@ -265,11 +154,18 @@ body {
 
 .hostel_details h1 {
   margin: 0 0 10px;
+  font-size: 7vw;
 }
 
 .hostel_details p {
   margin: 10px 0;
   font-size: x-small;
+}
+
+.top {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .back_link {
@@ -293,16 +189,23 @@ body {
   align-items: center;
   overflow-x: auto;
   gap: 10px;
+  background: transparent;
   border-radius: 20px;
   margin-bottom: 20px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
 .image-gallery img {
   width: 100%;
-  max-width: 300px;
-  height: auto;
+  height: 60vw;
+  min-width: none;
+  max-width: 500px;
+  min-height: 200px;
+  max-height: 350px;
+  object-fit: cover;
   border-radius: 8px;
   flex-shrink: 0;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
 .image-gallery::-webkit-scrollbar {
@@ -316,11 +219,11 @@ body {
 
 #hostelName {
   display: flex;
-  justify-content: center;
   align-items: center;
+  grid-column: span 3;
 }
 
-.success-checkmark {
+/* .success-checkmark {
   display: inline-block;
   position: relative;
   width: 20px;
@@ -335,7 +238,6 @@ body {
   width: 20px;
   height: 20px;
   text-align: center;
-  /* border: white solid 1px; */
   background-color: transparent;
   border-radius: 50%;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
@@ -371,12 +273,144 @@ body {
 
 .dark-mode .crosssign::before {
   color: black;
+} */
+
+.location {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  margin-left: auto;
+}
+
+.icon {
+  position: relative;
+  width: 30px;
+  height: 19px;
+  background-color: red;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  z-index: 9;
+}
+
+.icon::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 25px solid red;
+  z-index: 10;
+}
+
+.icon::before {
+  content: "";
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 15px;
+  height: 15px;
+  background-color: #202020;
+  border: none;
+  border-radius: 50%;
+  z-index: 11;
+}
+
+.dark-mode .icon::before {
+  background-color: #f9fafb;
+}
+
+.link-icon {
+  position: absolute;
+  top: -5px;
+  right: 25px;
+  width: 20px;
+  height: 20px;
+  z-index: 14;
+}
+
+.segment {
+  width: 20px;
+  height: 10px;
+  border: 2px solid white;
+  border-radius: 5px;
+  box-sizing: border-box;
+  background-color: transparent;
+  position: absolute;
+}
+
+.dark-mode .segment {
+  border-color: #000;
+}
+
+.first-segment {
+  transform: rotate(-30deg);
+  top: 2px;
+  left: 0;
+}
+
+.second-segment {
+  transform: rotate(60deg);
+  top: 7px;
+  left: 10px;
+}
+
+.success-checkmark,
+.crosssign {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 0 0.8px 0;
+  width: 22px; /* Fixed width */
+  height: 22px; /* Fixed height */
+  color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  font-weight: bold;
+  overflow: hidden; /* Prevents content from overflowing */
+  box-sizing: border-box; /* Ensures padding and border are included in the element's size */
+}
+
+.success-checkmark::after,
+.crosssign::before {
+  font-size: 15px;
+}
+
+.success-checkmark::after {
+  content: "\2714";
+  color: lime;
+}
+
+.crosssign::before {
+  content: "\2716";
+  color: red;
+}
+
+.dark-mode .success-checkmark,
+.dark-mode .crosssign {
+  color: black;
+  border-color: rgba(0, 0, 0, 0.5);
 }
 
 .amenities h2 {
-  margin: 5px 0 0 0;
-  font-size: 20px;
+  margin: 0 0 10px 0;
+  font-size: 3.5vh;
   color: #ffffff;
+}
+
+.amenities .main {
+  position: relative;
+  bottom: -10px;
+  margin: 0;
+  font-size: 5vh;
 }
 
 .common_details,
@@ -399,6 +433,8 @@ body {
 .amenities-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-content: center;
   gap: 20px;
 }
 
@@ -406,7 +442,7 @@ body {
   text-align: center;
   font-size: 18px;
   color: #bcbcbc;
-  padding: 20px;
+  padding: 15px;
   grid-column: span 4;
 }
 
@@ -415,24 +451,22 @@ body {
   gap: 30px;
 }
 
-@media (min-width: 768px) {
-  .amenities-grid {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
 .dark-mode .amenities h2 {
   color: #000000;
 }
 
 .amenity {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
 }
 
 .amenity p {
   margin: 0;
-  color: #ffffff;
+  display: grid;
+  align-items: center;
+  color: #ffffffe7;
+  font-size: 1.7vh;
+  font-weight: 900;
 }
 
 .dark-mode .amenity p {
@@ -443,7 +477,23 @@ body {
   margin-right: 10px;
 }
 
-.success-checkmark {
+.hostel_details .price {
+  margin-top: 0;
+  position: relative;
+  top: -10px;
+  left: 3px;
+}
+
+.hostel_details .price_text {
+  top: 0;
+  color: #ffffffbb;
+}
+
+.dark-mode .hostel_details .price_text {
+  color: #000000bb;
+}
+
+/* .success-checkmark {
   width: 20px;
   height: 20px;
   color: white;
@@ -477,9 +527,155 @@ body {
 .dark-mode .crosssign {
   color: black;
   border-color: black;
-}
+} */
 
 .box_same {
-  height: 250px;
+  height: 300px;
   width: auto;
+}
+
+.NA {
+  height: 100px;
+}
+
+/* #hostelDetailsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  max-width: 500px;
+  margin: auto;
+  padding: 20px;
+  color: #ffffff;
+}
+
+#hostelDetailsContainer p {
+  margin: 0;
+  font-weight: 400;
+  line-height: 1.4;
+  text-align: center;
+}*/
+
+.sub-top {
+  /* grid-column: span 4; */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: relative;
+  top: -20px;
+}
+
+#hostelPrice {
+  font-size: 16px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.dark-mode #hostelPrice {
+  color: #000000;
+}
+
+#hostelGender {
+  background-color: #444444;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  text-transform: capitalize;
+  color: #ffffff;
+  margin-left: auto;
+}
+
+.dark-mode #hostelGender {
+  background-color: #cdcdcd;
+  color: #000000;
+}
+/*
+#hostelDeposit {
+  font-size: 1.3rem;
+  color: #ffffff;
+}
+
+#hostelDistance {
+  font-size: 1.1rem;
+  font-style: italic;
+  color: #ffffff;
+}
+
+#hostelGender {
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  color: #ffffff;
+}
+
+.dark-mode #hostelDetailsContainer p {
+  color: #000000;
+} */
+
+.info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #333; */
+  padding: 10px 0px;
+  border-radius: 8px;
+}
+
+.fee,
+.distance {
+  font-size: 16px;
+  color: #f0f0f0;
+}
+
+.fee span,
+.distance span {
+  font-weight: normal;
+  margin-left: 5px;
+  color: #ccc;
+}
+
+.separator {
+  width: 2px;
+  height: 20px;
+  background-color: #ffffffbe;
+  margin: 0 15px;
+}
+
+.dark-mode .fee,
+.dark-mode .distance {
+  font-size: 16px;
+  color: #000000;
+}
+
+.dark-mode .fee span,
+.dark-mode .distance span {
+  font-weight: normal;
+  margin-left: 5px;
+  color: #0000007f;
+}
+
+.dark-mode .separator {
+  width: 2px;
+  height: 20px;
+  background-color: #000000be;
+  margin: 0 15px;
+}
+
+.distance strong {
+  font-weight: bold;
+}
+
+@media (min-width: 768px) {
+  .amenities-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .hostel_details h1 {
+    font-size: 4vw;
+  }
+
+  .location {
+    top: 10px;
+    left: 0px;
+  }
 }
