--- a/Details/details.css
+++ b/Details/details.css
@@ -196,7 +196,7 @@ body {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
-.image-gallery img {
+.image-gallery img, .image-gallery video {
   width: 100%;
   height: 60vw;
   min-width: none;
