--- a/About/about.css
+++ b/About/about.css
@@ -220,6 +220,14 @@ a.github {
   transition-duration: 100ms;
 }
 
+a.facebook {
+  background-color: white;
+  color: #1877F2;
+  border-bottom-right-radius: 180px;
+  transition: linear;
+  transition-duration: 100ms;
+}
+
 a.discord {
   background-color: white;
   color: #8f99ff;
@@ -248,6 +256,11 @@ a.discord:hover {
   color: white;
 }
 
+a.facebook:hover {
+  background-color: #1877F2;
+  color: white;
+}
+
 a.youtube:hover {
   background-color: #ff0000;
   color: white;
@@ -257,6 +270,7 @@ a.instagram:hover,
 a.linkedin:hover,
 a.youtube:hover,
 a.github:hover,
-a.discord:hover {
+a.discord:hover,
+a.facebook:hover {
   box-shadow: 0 0 20px grey;
 }
