--- a/Details/details.css
+++ b/Details/details.css
@@ -685,15 +685,24 @@ body {
 
 .fee,
 .distance {
-  font-size: 16px;
+  font-size: 13px;
   color: #f0f0f0;
 }
 
 .fee span,
 .distance span {
   font-weight: normal;
-  margin-left: 5px;
+  margin: 0 3px;
   color: #ccc;
+}
+
+.fee .food .plus {
+  margin: 0;
+  margin-right: 7px;
+}
+
+.food {
+  display: none;
 }
 
 .separator {
