--- a/About/about.css
+++ b/About/about.css
@@ -9,7 +9,7 @@ body {
   font-family: Arial, sans-serif;
   color: #ffffff;
   background-color: #121212;
-  height: 100%;
+  height: auto;
   width: 100%;
 }
 
@@ -117,12 +117,15 @@ body {
 
 .cards {
   display: flex;
-  
 }
 
 .name {
     font-size: larger;
     font-weight: bolder;
+}
+
+.content {
+  margin-top: 10vh;
 }
 
 .contact {
@@ -149,7 +152,7 @@ div.container {
   justify-content: center;
   align-items: center;
   position: relative;
-  top: -30px;
+  top: 0px;
   width: 100%;
   height: 45vh;
 }
@@ -274,4 +277,13 @@ a.github:hover,
 a.discord:hover,
 a.facebook:hover {
   box-shadow: 0 0 20px grey;
+}
+
+
+@media (max-width: 768px) {
+  .cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 10vh;
+  }
 }
