--- a/About/about.css
+++ b/About/about.css
@@ -120,8 +120,8 @@ body {
 }
 
 .name {
-    font-size: larger;
-    font-weight: bolder;
+  font-size: larger;
+  font-weight: bolder;
 }
 
 .content {
@@ -141,9 +141,9 @@ body {
 }
 
 p {
-    text-align: justify;
-    text-justify: inter-word;
-    padding: 0 20px;
+  text-align: justify;
+  text-justify: inter-word;
+  padding: 0 20px;
 }
 
 div.container {
@@ -151,8 +151,18 @@ div.container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 100px;
+  width: 100%;
+  height: 100%;
+}
+
+div.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  top: 0px;
+  top: 5vh;
   width: 100%;
   height: 45vh;
 }
@@ -282,8 +292,8 @@ a.facebook:hover {
 
 @media (max-width: 768px) {
   .cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  row-gap: 10vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 10vh;
   }
 }
